# ueye_cam

./: CMakeLists.txt  README.md  package.xml
config/: ueye_speed.ini
include/ueye_cam/: ueye_cam_nodelet.hpp
launch/: bayer_rggb_image_proc.launch  debug.launch  master_slaves_rgb8.launch  rgb8.launch  xs_bayer_rggb.launch
src/: ueye_cam_nodelet.cpp
